@@ -21,7 +21,8 @@ Mantis ChangeLog
  * Fix #3020: Error when deleting a bug with bugnotes.
  * Fix #3021: Error when using phpMailer.
  * Fix #3022: Add user to project form lists disabled users.
- * Fix #3047:  Manually assigned developers cannot resolve in All Projects view.
+ * Fix #3047: Manually assigned developers cannot resolve in All Projects view.
+ * Fix #3050: Setting Assigned To to null causes Status to change to assigned
 
 2003.02.26  -  0.18.0a3
 
